dev_move_test/objects/LABJS_Mo_Tester_2__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Mo Tester 2s</relationshipLabel>
        <relationshipName>Mo_Tester_2s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT2_Checkbox_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MT2 Checkbox 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT2_Currency_1__c</fullName>
        <label>MT2 Currency 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT2_Date_1__c</fullName>
        <label>MT2 Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT2_Datetime_1__c</fullName>
        <label>MT2 Datetime 1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MT2_Email_1__c</fullName>
        <label>MT2 Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MT2_Geolocation_1__c</fullName>
        <label>MT2 Geolocation 1</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MT2_Multi_Select_1__c</fullName>
        <label>MT2 Multi Select 1</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MT2 MS1 One</fullName>
                </value>
                <value>
                    <fullName>MT2 MS1 Two</fullName>
                </value>
                <value>
                    <fullName>MT2 MS1 Three</fullName>
                </value>
                <value>
                    <fullName>MT2 MS1 Four</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT2_Number_1__c</fullName>
        <label>MT2 Number 1</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT2_Percent_1__c</fullName>
        <label>MT2 Percent 1</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT2_Phone_1__c</fullName>
        <label>MT2 Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MT2_Picklist_1__c</fullName>
        <label>MT2 Picklist 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MT2 P1 One</fullName>
                </value>
                <value>
                    <fullName>MT2 P1 Two</fullName>
                </value>
                <value>
                    <fullName>MT2 P1 Three</fullName>
                </value>
                <value>
                    <fullName>MT2 P1 Four</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT2_Text_1__c</fullName>
        <label>MT2 Text 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT2_Text_Area_Long_1__c</fullName>
        <label>MT2 Text Area Long 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MT2_Text_Area_Rich_1__c</fullName>
        <label>MT2 Text Area Rich 1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MT2_Text_Encrypted_1__c</fullName>
        <label>MT2 Text Encrypted 1</label>
        <length>25</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>MT2_Textarea_1__c</fullName>
        <label>MT2 Textarea 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MT2_URL_1__c</fullName>
        <label>MT2 URL 1</label>
        <type>Url</type>
    </fields>
    <label>Mo Tester 2</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mo Tester 2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mo Tester 2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>